style.css
html {
	/*height: 100%;*/
}

body {
	/*display: flex;*/
	/*flex-flow: row wrap; */
	/*height: 100% !important;
	width: 100% !important;
	overflow: visible !important;*/
}

.topScreen {
	/*flex: 1;*/
	border-style: inset;
	display: none;
}
.mainFrame {
	height: 100vh;
	width: 100vw;
	display: flex;
	flex-direction: column;
	position: absolute;
	top: 0;
	left: 0;
}
@media (orientation: landscape) {
	.mainFrame {
		flex-direction: row;
	}
}
.toolbar {
	min-height: 40px;
	background: black;
}
.field {
	padding-left: 10px;
}
.object {
	padding-left: 20px;
}

.field.closed + .object, .objectName.closed + .object {
	display: none;
}

.field.closed, .objectName.closed {
	text-decoration: underline;
}

.guiScreen {
	/*width: 800px;
	height: 600px;
	min-width: 0;
	min-height: 0;*/
	border-style: inset;
	flex-grow: 1;
}
@media (orientation: landscape) {
	.guiScreen {
		width: calc(100vw - 80px);
	}
}
@media (orientation: portrait) {
	.guiScreen {
		height: calc(100vw - 47px);
	}
}
.nameField {
	font-weight: bold;
}
.inputButtonSet {
	display: flex;
	align-items: center;
}
.inputButtonSet .button{
	flex-shrink: 0;
}

